docs/v0.2.0a190/_sources/reference/_autosummary/hpcflow.sdk.submission.shells.base.Shell.rst.txt
hpcflow.sdk.submission.shells.base.Shell
========================================

.. currentmodule:: hpcflow.sdk.submission.shells.base

.. autoclass:: Shell
   :members:
   :show-inheritance:
   :undoc-members:
   :inherited-members:   

   
   
   .. rubric:: Methods

   .. autosummary::
      :nosignatures:
   
      ~Shell.format_loop_check
      ~Shell.format_save_parameter
      ~Shell.format_stream_assignment
      ~Shell.get_direct_submit_command
      ~Shell.get_version_info
      ~Shell.get_wait_command
      ~Shell.prepare_JS_path
      ~Shell.prepare_element_run_dirs
      ~Shell.process_JS_header_args
      ~Shell.process_app_invoc_executable
      ~Shell.wrap_in_subshell
   
   

   
   
   .. rubric:: Attributes

   .. autosummary::
   
      ~Shell.os_args
      ~Shell.executable
      ~Shell.shebang_executable
      ~Shell.JS_EXT
      ~Shell.DEFAULT_EXE
      ~Shell.JS_ENV_SETUP_INDENT
      ~Shell.JS_SHEBANG
      ~Shell.JS_HEADER
      ~Shell.JS_SCHEDULER_HEADER
      ~Shell.JS_DIRECT_HEADER
      ~Shell.JS_MAIN
      ~Shell.JS_ELEMENT_ARRAY
      ~Shell.JS_ELEMENT_LOOP
      ~Shell.JS_INDENT
   
   