docs/v0.2.0a205/_sources/reference/_autosummary/hpcflow.sdk.submission.shells.base.Shell.rst.txt
hpcflow.sdk.submission.shells.base.Shell
========================================

.. currentmodule:: hpcflow.sdk.submission.shells.base

.. autoclass:: Shell
   :members:
   :show-inheritance:
   :undoc-members:
   :inherited-members:   

   
   
   .. rubric:: Methods

   .. autosummary::
      :nosignatures:
   
      ~Shell.format_array
      ~Shell.format_array_get_item
      ~Shell.format_commands_file
      ~Shell.format_env_var_get
      ~Shell.format_save_parameter
      ~Shell.format_source_functions_file
      ~Shell.format_stream_assignment
      ~Shell.get_command_file_launch_command
      ~Shell.get_direct_submit_command
      ~Shell.get_version_info
      ~Shell.get_wait_command
      ~Shell.prepare_JS_path
      ~Shell.prepare_element_run_dirs
      ~Shell.process_JS_header_args
      ~Shell.process_app_invoc_executable
   
   

   
   
   .. rubric:: Attributes

   .. autosummary::
   
      ~Shell.os_args
      ~Shell.DEFAULT_EXE
      ~Shell.executable
      ~Shell.shebang_executable
      ~Shell.JS_EXT
      ~Shell.JS_INDENT
      ~Shell.JS_ENV_SETUP_INDENT
      ~Shell.JS_SHEBANG
      ~Shell.JS_FUNCS
      ~Shell.JS_HEADER
      ~Shell.JS_SCHEDULER_HEADER
      ~Shell.JS_DIRECT_HEADER
      ~Shell.JS_RUN_LOG_PATH_ENABLE
      ~Shell.JS_RUN_LOG_PATH_DISABLE
      ~Shell.JS_RUN_CMD
      ~Shell.JS_RUN_CMD_COMBINED
      ~Shell.JS_RUN
      ~Shell.JS_ACT_MULTI
      ~Shell.JS_ACT_SINGLE
      ~Shell.JS_MAIN
      ~Shell.JS_BLOCK_HEADER
      ~Shell.JS_ELEMENT_SINGLE
      ~Shell.JS_ELEMENT_MULTI_LOOP
      ~Shell.JS_ELEMENT_MULTI_ARRAY
      ~Shell.JS_BLOCK_LOOP
      ~Shell.JS_FOOTER
   
   